# lie-diffuser-actor

./: .gitignore  LICENSE  README.md
calvin/: README.md  environment.yaml  pyproject.toml  train.py
calvin/configs/: ablation_no_gat_abc_d.yaml  ablation_no_gat_abcd_d.yaml  ablation_no_lie_abc_d.yaml  ablation_no_lie_abcd_d.yaml  lda_abc_d.yaml  lda_abcd_d.yaml
calvin/lda/: engine.py  trainer.py
calvin/lda/data/: calvin.py  engine.py  utils.py
calvin/lda/diffusion/lie/metrics/: se3.py  so3.py
calvin/lda/diffusion/lie/noise/: __init__.py  base.py  power.py
calvin/lda/diffusion/lie/utils/: ops.py
calvin/lda/encoder/: encoder.py
calvin/lda/eval/: evaluate_model.py  evaluate_policy.py  evaluate_utils.py  multistep_sequences.py
calvin/lda/gat/: __init__.py  clip.py  encoder.py  graph_planner.py  layers.py  multihead_custom_attention.py  position_encodings.py  resnet.py  utils.py
calvin/lda/gat/models/: conditions.py  gat_encoder.py  transformer.py
calvin/lda/model/: diffuser_actor.py  liepose_diffusion.py
calvin/lda/utils/: calvin.py  config.py
calvin/scripts/: download_ckpts.sh  eval.sh  package_calvin.py  preprocess_calvin_instructions.py  setup_calvin.sh  train.sh
calvin/tests/: _helpers.py  test_ckpt_compat.py  test_config.py  test_forward_smoke.py  test_imports.py
docs/: index.html
docs/static/: BibTeX.jsx  Figure.jsx  Footer.jsx  Hero.jsx  Nav.jsx  ResultsTable.jsx  RobotGrid.jsx  Section.jsx  Video.jsx  colors_and_type.css  site.css
openvla_oft/: Makefile  README.md  environment.yaml  pyproject.toml
openvla_oft/experiments/robot/: openvla_utils.py
openvla_oft/experiments/robot/libero/: run_libero_eval.py
openvla_oft/lda_oft/: config.py  eval.py  train.py
openvla_oft/lda_oft/configs/: oft_baseline_libero10.yaml  oft_euclidean_sm_libero10.yaml  oft_lie_sm_libero10.yaml
openvla_oft/prismatic/models/: action_heads.py
openvla_oft/scripts/: download_ckpts.sh  eval.sh  setup_libero.sh  train.sh
openvla_oft/tests/: test_ckpt_compat.py  test_configs.py  test_imports.py  test_lie_group_flag.py  test_wrappers.py
openvla_oft/vla-scripts/: deploy.py  finetune.py
tasks/: README.md
